--- a/3gang/Dockerfile
+++ b/3gang/Dockerfile
@@ -2,9 +2,9 @@ FROM node:18-alpine
 
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci
+RUN npm install
 COPY . .
 RUN npm run build
 
 EXPOSE 3000
-CMD ["npm", "run", "preview"] 
+CMD ["npm", "run", "start"] 
