--- a/3gang/package.json
+++ b/3gang/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "start": "vite preview"
+    "start": "vite preview --host 0.0.0.0 --port 3000"
   },
   "dependencies": {
     "vue": "^3.3.11"
