--- a/3gang/Dockerfile
+++ b/3gang/Dockerfile
@@ -1,37 +1,13 @@
-# Этап сборки
-FROM node:18-alpine AS builder
+FROM node:18 as build-stage
 
 WORKDIR /app
-
-# Установка зависимостей для сборки
-RUN apk add --no-cache python3 make g++
-
-# Копируем только файлы package.json сначала
 COPY package*.json ./
-
-# Устанавливаем все зависимости, включая devDependencies
 RUN npm install
-
-# Копируем исходный код
 COPY . .
 
-# Собираем проект
 RUN npm run build
 
-# Этап production
-FROM node:18-alpine
-
-WORKDIR /app
-
-# Копируем только необходимые файлы из этапа сборки
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/package*.json ./
-
-# Устанавливаем только production зависимости
-RUN npm install --production
-
-# Открываем порт
-EXPOSE 3000
-
-# Запускаем сервер
-CMD ["npm", "run", "start"] 
+FROM nginx:stable-alpine as production-stage
+COPY --from=build-stage /app/dist /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"] 
