--- a/3gang/package.json
+++ b/3gang/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview --host --port 80"
   },
   "dependencies": {
     "vue": "^3.3.11"
